# fastapi-celery

./: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci-frontend.yml  ci.yaml  deploy.yml
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  run.sh  tsconfig.json  vite.config.ts
frontend/nginx/: default.conf.template
frontend/src/: App.tsx  vite-env.d.ts
infra/: README.md  main.tf  task_definition.json
infra/ecr/: main.tf
infra/iam_roles/: main.tf
infra/security_group/: main.tf
src/fastapi_celery/: main.py  worker.py
